mobile grid overflow fix

--- a/less/style.less
+++ b/less/style.less
@@ -287,6 +287,7 @@ footer {
           display: block;
           float: none;
           margin-bottom: 15px;
+          overflow: hidden;
         }
       }
       img {
